2003-12-02   Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Dutch translation added by Vincent van Adrighem.

2003-12-01  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Added Portuguese translation.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* .cvsignore: Added this file.

2003-06-11  Piotr Eljasiak  <epiotr@use.pl>

	* Updated Russian translation (thanks to Pavlo Bohmat)
