@@ -1,5 +1,10 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
 gnome-commander.desktop.in
 libgcmd/gnome-cmd-string-dialog.c
+plugins/cvs/interface.c
+plugins/fileroller/file-roller-plugin.c
+src/gnome-cmd-about-plugin.c
 src/gnome-cmd-advrename-dialog.c
 src/gnome-cmd-bookmark-dialog.c
 src/gnome-cmd-chmod-component.c
@@ -12,15 +17,16 @@ src/gnome-cmd-con-home.c
 src/gnome-cmd-con-smb.c
 src/gnome-cmd-delete-dialog.c
 src/gnome-cmd-dir.c
-src/gnome-cmd-file.c
 src/gnome-cmd-file-list.c
 src/gnome-cmd-file-popmenu.c
 src/gnome-cmd-file-props-dialog.c
 src/gnome-cmd-file-selector.c
+src/gnome-cmd-file.c
 src/gnome-cmd-ftp-dialog.c
 src/gnome-cmd-list-popmenu.c
 src/gnome-cmd-main-menu.c
 src/gnome-cmd-main-win.c
+src/gnome-cmd-make-copy-dialog.c
 src/gnome-cmd-mkdir-dialog.c
 src/gnome-cmd-options-dialog.c
 src/gnome-cmd-patternsel-dialog.c
@@ -29,16 +35,14 @@ src/gnome-cmd-prepare-move-dialog.c
 src/gnome-cmd-prepare-xfer-dialog.c
 src/gnome-cmd-quicksearch-popup.c
 src/gnome-cmd-rename-dialog.c
-src/gnome-cmd-make-copy-dialog.c
 src/gnome-cmd-search-dialog.c
 src/gnome-cmd-search-popup.c
-src/gnome-cmd-xfer.c
-src/gnome-cmd-about-plugin.c
+src/gnome-cmd-smb-path.c
 src/gnome-cmd-xfer-progress-win.c
-src/plugin_manager.c
+src/gnome-cmd-xfer.c
 src/imageloader.c
 src/main.c
 src/owner.c
+src/plugin_manager.c
 src/useractions.c
 src/utils.c
-plugins/fileroller/file-roller-plugin.c
