@@ -1,3 +1,7 @@
+2003-12-03  Danilo Šegan  <dsegan@gmx.net>
+
+	* POTFILES.in: Added missing files, comment and sorted.
+
 2003-12-02   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation added by Vincent van Adrighem.
